[package]
name = "blunky"
version = "0.1.0"
authors = ["Ian Bygrave <ian@bygrave.me.uk>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "blunky"
test = false
bench = false

[dependencies]
panic-halt = "0.2"
ufmt = "0.2"
nb = "0.1"
embedded-hal = "0.2"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
