[package]
name = "blunky"
version = "0.3.0"
authors = ["Ian Bygrave <ian@bygrave.me.uk>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "blunky"
test = false
bench = false

[lints.clippy]
pedantic = "warn"

[dependencies.avr-device]
version = "0.5"
features = ["atmega328p"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
